# scop

./: .gitignore  .travis.yml  README.md  basic_test.py  requirements.txt  setup.cfg
archives/scope/: cluster_train.sbatch  hyperopt.py  parse_config.py  test.py  test_on_validation.py  train.py
archives/scopeV2/: dataset_visualisation.ipynb  train.py  trainer.py
clinical_scope/: applied_clinical_scores.ipynb  result_comparison.ipynb
clinical_scope/clinical_variable_preprocessing/: clinical_variable_extraction.ipynb  requirements.txt
experiment_configs/outcome_scope/: bartholin.json  mobas.json  yggdrasil.json
keras_scope/: README.md  augmentation.py  cross_validate.py  data_augment_test.ipynb  model.py  parse_config.py  preprocessing.py  requirements.txt  setup.cfg  test.py  train.py  utils.py
keras_scope/cluster_scripts/: baobab_cross_validation_script.sbatch  cross_validation_script.sbatch  debug_script.sbatch
keras_scope/configs/: bartholin.json  mobas.json  yggdrasil.json
keras_scope/datasets/: base_dataset.py  gsd_outcome_dataset.py  leftright_dataset.py
keras_scope/with_lesion_input/: cross_validate_with_ground_truth_lesion.py
scope/: cluster_hyperopt.sbatch  cluster_train.sbatch  config.json  cross_validate.py  hyperopt.py  parse_config.py  test.py  test_on_validation.py  train.py
scopeV2/: augmentation.py  dataset_visualisation.ipynb  parseConfig.py  train.py  trainer.py
scope_onset/: cross_validate.py  metrics.py  parse_config.py  requirements.txt  test.py  train.py
temp_tests/: basic_dataloader_test.py  basic_test.py
(+93 files in other folders)
