[metadata]
name = scope
version = 0.0.1-dev
description = Stroke Clinical Outcome Prediction.
url = https://github.com/JulianKlug/scope
keywords =
    scope
    stroke
    onset
    outcome

provides = scope

license = MIT
license_file = LICENSE

[options]
python_requires = >=3.8
install_requires =
    matplotlib
    tensorflow==2.5
    keras==2.4
    numpy
    sklearn
    openpyxl
    ray[tune]
    pandas
    monai
    scikit-image
    gputil
    tensorflow_probability==0.13
    modun @ git+https://github.com/Jimmy2027/MODUN.git
    norby @ git+https://github.com/Jimmy2027/NORBY.git


packages = find:
