[metadata]
name = keras_scope
version = 0.0.1-dev
description = Codebase for predicting outcome in stroke from perfusion imaging.
url = https://github.com/JulianKlug/scope
keywords =
    stroke
    scope
    data analysis
    deep learning

provides = keras_scope

license = GNUv3
license_file = LICENSE

[options]
python_requires = >=3.8
install_requires =
    matplotlib
    tensorflow==2.5
    numpy
    sklearn
    pandas
    modun @ git+https://github.com/Jimmy2027/MODUN.git
    norby @ git+https://github.com/Jimmy2027/NORBY.git


packages = find:


[options.extras_require]
test =
    pytest